third_party/rust/chromium_crates_io/vendor/num_enum-v0_7/tests/try_build/compile_fail/variants_with_fields.rs
use num_enum::{FromPrimitive, IntoPrimitive, TryFromPrimitive};

#[derive(Debug, Eq, PartialEq, TryFromPrimitive)]
#[repr(u8)]
enum Number {
    Zero,
    NonZero(u8),
}

#[derive(Debug, Eq, PartialEq, FromPrimitive)]
#[repr(u8)]
enum Colour {
    Red { intensity: u8 },
}

#[derive(Debug, Eq, PartialEq, IntoPrimitive)]
#[repr(u8)]
enum Meaningless {
    Beep(),
}

fn main() {}
